Make skills text shrink @ small width to stop overlap. Smaller headings.

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,11 +4,11 @@ body {
 
 .project-container {
   position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 35px;
-    height: 0;
-    overflow: hidden;
-    border: 1px solid black;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hidden;
+  border: 1px solid black;
 }
 
 .project-image {
@@ -27,18 +27,18 @@ body {
 }
 
 .project-container iframe {
-    position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .img-circle {
-    border-radius: 50%;
-    max-width: 250px;
-    height: auto;
-    border: 4px solid white;
+  border-radius: 50%;
+  max-width: 250px;
+  height: auto;
+  border: 4px solid white;
 }
 
 .slides {
@@ -51,8 +51,8 @@ body {
 }
 
 #section {
-    margin: 0 auto;
-    padding: 0px;
+  margin: 0 auto;
+  padding: 0px;
 }
 
 .appDesc {
@@ -83,9 +83,8 @@ body {
 }
 
 .img-fluid {
-max-width: 100%;
-height: auto;
-
+  max-width: 100%;
+  height: auto;
 }
 
 .content {
@@ -107,18 +106,18 @@ height: auto;
 
 .projectsHeader {
   text-align: center;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: bolder;
-  color: black ;
+  color: black;
 }
 
 .skillsHeader {
   text-align: center;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: bolder;
   color: black;
   margin-top: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .bg-green {
@@ -146,7 +145,7 @@ height: auto;
 
 #projects {
   padding-top: 25px;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 #skills {
@@ -164,31 +163,44 @@ height: auto;
 }
 
 #contact {
-	padding-top: 25px;
+  padding-top: 25px;
 }
 
 .nav-list li {
-	text-align: center;
-	width: 25%;
+  text-align: center;
+  width: 25%;
 }
 
 .nav-list li a:hover {
-	color:#333333;;
+  color: #333333;
+  ;
 }
 
 .btn {
-	background-color: #333333;
-	margin-right: 2px;
+  background-color: #333333;
+  margin-right: 2px;
 }
 
-.btn:hover{
-	background-color: #53A150;
+.btn:hover {
+  background-color: #53A150;
 }
 
 header {
- 	min-height: 100%;
- }
+  min-height: 100%;
+}
 
 i {
-	font-size: 4rem;
- }
+  font-size: 4rem;
+}
+
+@media (max-width: 768px) {
+  .skill p {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 768px) {
+  .skill p {
+    font-size: 16px;
+  }
+}
